[gd_scene load_steps=6 format=3 uid="uid://c525a1purwymb"]

[ext_resource type="Theme" uid="uid://bg1ma7hebf0y2" path="res://assets/ui_theme/9_by_16 resolution_theme.tres" id="1_2ei5b"]
[ext_resource type="PackedScene" uid="uid://ceicxxvhrqgld" path="res://scenes/action_menu/scheduler/schedule_tracker.tscn" id="2_ccelt"]
[ext_resource type="Script" uid="uid://dac1ggr5me40r" path="res://scenes/action_menu/scheduler/schedule_panel.gd" id="2_q0w7g"]
[ext_resource type="Script" uid="uid://c65we651fq2kx" path="res://scenes/action_menu/scheduler/action_list.gd" id="3_o8gv7"]
[ext_resource type="PackedScene" uid="uid://cc5g7epkt04pd" path="res://scenes/action_menu/scheduler/action_block.tscn" id="4_o8gv7"]

[node name="SchedulePanel" type="PanelContainer"]
offset_right = 395.0
offset_bottom = 505.0
theme = ExtResource("1_2ei5b")
theme_type_variation = &"paper_panel"
script = ExtResource("2_q0w7g")

[node name="RunDayButton" type="Button" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ActionPanel" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"main_action_panel"

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/HBoxContainer/ActionPanel"]
layout_mode = 2
script = ExtResource("3_o8gv7")
action_block_scene = ExtResource("4_o8gv7")
actions_folder = "res://global/action_resource/"

[node name="ScheduleTracker" parent="PanelContainer/HBoxContainer" instance=ExtResource("2_ccelt")]
layout_mode = 2
